--- a/final-website/index.html
+++ b/final-website/index.html
@@ -16,13 +16,13 @@
 <!-- you could add favicons etc here -->
 
     <!-- set the site title to be a variable, defined in the md file -->
-    <title>11056 Project 2 Starter</title>
+    <title>Our House</title>
 </head>
 
 <body>
     <header>
         <div class="inner-wrapper">
-            <h1>11056 Project 2 Starter</h1>
+            <h1>Our House</h1>
         </div>
     </header>
     <main>
@@ -40,6 +40,42 @@
 <h2>I am your index.md file</h2>
 <p>Any content you add to this markdown file will be displayed on the homepage</p>
 
+    
+    <div class="margins">
+        <div class="house">
+            <img class="roomTower"
+            src="Images/Square_1.png"
+            alt="Assets"
+            />
+          <img class="roomTower"
+            src="Images/Square_2.png"
+            alt="Assets"
+          />
+          <img class="roomTower"
+            src="Images/Square_3.png"
+            alt="Assets"
+          />
+          <img class="roomTower"
+            src="Images/Square_4.png"
+            alt="Assets"
+          />
+          <img class="roomHouse"
+            src="Images/Rectangle_1.png"
+            alt="Assets"
+          />  
+          <img class="roomHouse"
+            src="Images/Rectangle_2.png"
+            alt="Assets"
+          />
+          <img class="roomHouse"
+            src="Images/Rectangle_3.png"
+            alt="Assets"
+          />
+          <img class="roomHouse"
+            src="Images/Rectangle_4.png"
+            alt="Assets"
+          />
+    </div>
 </div>
             
         </div>
@@ -48,8 +84,6 @@
     <!-- The content in this file is inserted into the base.html file -->
 <footer>
     <div class="inner-wrapper">
-        <p>This content is in the _footer.html file.</p>
-        <p>This page was made by Ben, you should update and remove this text. </p>
     </div>
 </footer>
 
